# DS_Homework_6

./: Hw6.ipynb  pyproject.toml
